namespaces/live.cloud-platform.service.justice.gov.uk/laa-ccms-user-details-api-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-ccms-user-details-api-preprod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-ccms-user-details-api-support"
    cloud-platform.justice.gov.uk/application: "CCMS USER DETAILS API"
    cloud-platform.justice.gov.uk/owner: "CCMS Applications team: applicationoperations@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-ccms-user-details-api"
    cloud-platform.justice.gov.uk/team-name: "laa-ccms-devs"
    cloud-platform.justice.gov.uk/review-after: ""
