namespaces/live.cloud-platform.service.justice.gov.uk/laa-ccms-user-details-api-preprod/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: laa-ccms-user-details-api-preprod
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: laa-ccms-user-details-api-preprod
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: ingress-controllers

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-laa-ccms-preprod
  namespace: laa-ccms-user-details-api-preprod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              cloud-platform.justice.gov.uk/namespace: laa-ccms-preprod


# Civil apply doesn't have dev env so we allow their uat and staging BOTH
# envs to connect to our preprod
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-laa-apply-for-legalaid-staging
  namespace: laa-ccms-user-details-api-preprod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              cloud-platform.justice.gov.uk/namespace: laa-apply-for-legalaid-staging


---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-laa-apply-for-legalaid-staging
  namespace: laa-ccms-user-details-api-preprod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              cloud-platform.justice.gov.uk/namespace: laa-apply-for-legalaid-staging

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-prometheus-scraping
  namespace: laa-ccms-user-details-api-preprod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              cloud-platform.justice.gov.uk/namespace: monitoring
